# OpenAnimeCLI

./: CMakeLists.txt  README.md
inc/: ArgumentParser.hpp  Common.hpp  Helpers.hpp  HttpClient.hpp  OpenAnimeAPI.hpp
inc/lib/: inquirer.hpp
inc/model/: Anime.hpp  AnimeSearch.hpp  Fansub.hpp  Season.hpp  Source.hpp
src/: ArgumentParser.cpp  Helpers.cpp  HttpClient.cpp  OpenAnimeAPI.cpp  main.cpp
